--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -10,9 +10,9 @@ OK - créer fichier .env.local et définir la connexion BDD
 OK - créer la BDD
 
 OK- créer l'entité mère User
-- les entités filles Customer et Professional 
+OK - les entités filles Customer et Professional 
 (inheritance mapping, pour n'avoir qu'une seule table en BDD)
 (les entités sreont dans un dossier User)
-- créer des fixtures pour chacune de ces 3 entités
+OK - créer des fixtures pour chacune de ces 2 entités
 
 - créer formulaire de connexion
