--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -17,4 +17,6 @@ OK - créer des fixtures pour chacune de ces 2 entités
 
 OK - créer formulaire de connexion
 
-- créer toutes les autres entités
+OK - créer toutes les autres entités
+
+- créer tests unitaires sur les entités
