--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -22,3 +22,5 @@ OK - créer toutes les autres entités
 - créer tests unitaires sur les entités
 
 - refacto les entités avec des Traits
+
+OK - créer les pages d'atterrisage suite à la connexion: /client et /pro
