--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -28,5 +28,8 @@ OK - créer les pages d'atterrisage suite à la connexion: /client et /pro
 - espace pro: 
   OK -- créer le menu et les pages: factures, devis, clients, profil
   -- créer CRUD client
+    OK --- read
+    --- delete
+    --- update
   -- créer CRUD devis
   -- créer CRUD facture
